--- a/apps/2_wagmui/pages/index.mdx
+++ b/apps/2_wagmui/pages/index.mdx
@@ -4,8 +4,9 @@ layout: landing
 
 import { HomePage } from 'vocs/components'
 
-import {BigIntInput} from "../../examples/BigIntInput"
+import { BigIntInput } from "../examples/BigIntInput"
 
 <HomePage.Root>
+<div className='font-azeret-mono'>hello</div>
   <BigIntInput/>
 </HomePage.Root>
