--- a/apps/2_wagmui/pages/index.mdx
+++ b/apps/2_wagmui/pages/index.mdx
@@ -7,5 +7,6 @@ import { HomePage } from 'vocs/components'
 import { BigIntInput } from "../examples/BigIntInput"
 
 <HomePage.Root>
+hello
   <BigIntInput/>
 </HomePage.Root>
