--- a/libraries/wagmui/docs/pages/index.mdx
+++ b/libraries/wagmui/docs/pages/index.mdx
@@ -16,6 +16,6 @@ import { HomePage } from 'vocs/components'
   </HomePage.Description>
   <HomePage.Buttons>
     <HomePage.Button href="/docs" variant="accent">Explore the docs</HomePage.Button>
-    <HomePage.Button href="/example">See examples</HomePage.Button>
+    <HomePage.Button href="/example">See examples s</HomePage.Button>
   </HomePage.Buttons>
 </HomePage.Root>
